Modify vercel.json file

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>Frontend</title>
-    <!-- <base href="/" /> -->
-    <base href="/myapp/" />
+    <base href="/" />
+    <!-- <base href="/myapp/" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link
@@ -18,3 +18,5 @@
     <app-root></app-root>
   </body>
 </html>
+
+<!-- in vercel.json file - "routes": [{ "src": "/(.*)", "dest": "/frontend/index.html" }] -->
